usage/tests/fails/duplicate_attribute.stderr
error: Duplicate definition for `#[try_migrate(prior)]`.
 --> tests/fails/duplicate_attribute.rs:5:23
  |
5 | #[try_migrate(prior = None)]
  |                       ^^^^

error: First definition is here:
 --> tests/fails/duplicate_attribute.rs:4:23
  |
4 | #[try_migrate(prior = None)]
  |                       ^^^^

error: Duplicate definition for `#[try_migrate(error)]`.
  --> tests/fails/duplicate_attribute.rs:10:23
   |
10 | #[try_migrate(error = None)]
   |                       ^^^^

error: First definition is here:
 --> tests/fails/duplicate_attribute.rs:9:23
  |
9 | #[try_migrate(error = None)]
  |                       ^^^^
